@@ -1511,6 +1511,8 @@ ABOUTDIALOG_LIBRARIES=\
     \  mALIGNa (MIT License)\n\
     \  trie4j (Apache License 2.0)
 
+ABOUTDIALOG_COPY_SUPPORT_INFO_BUTTON=&Copy Support Info
+
 # LicenseDialog.java
 
 LICENSEDIALOG_TITLE=OmegaT license
